@@ -1,5 +1,7 @@
 package kr.mybrary.bookservice.recommend;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import kr.mybrary.bookservice.mybook.MyBookFixture;
 import kr.mybrary.bookservice.mybook.persistence.MyBook;
@@ -12,11 +14,11 @@ import lombok.AllArgsConstructor;
 public enum RecommendationFeedFixture {
 
     COMMON_LOGIN_USER_RECOMMENDATION_FEED(1L, MyBookFixture.COMMON_LOGIN_USER_MYBOOK.getMyBook(), "LOGIN_USER_ID", "CONTENT EXAMPLE", false,
-            new RecommendationTargets(List.of(RecommendationTarget.builder().targetName("TARGET_NAME_1").deleted(false).build(),
-                    RecommendationTarget.builder().targetName("TARGET_NAME_2").deleted(false).build()))),
+            new RecommendationTargets(new ArrayList<>(Arrays.asList(RecommendationTarget.builder().targetName("TARGET_NAME_1").deleted(false).build(),
+                    RecommendationTarget.builder().targetName("TARGET_NAME_2").deleted(false).build())))),
     COMMON_OTHER_USER_RECOMMENDATION_FEED(1L, MyBookFixture.COMMON_LOGIN_USER_MYBOOK.getMyBook(), "OTHER_USER_ID", "CONTENT EXAMPLE", false,
-            new RecommendationTargets(List.of(RecommendationTarget.builder().targetName("TARGET_NAME_1").deleted(false).build(),
-                    RecommendationTarget.builder().targetName("TARGET_NAME_2").deleted(false).build())));
+            new RecommendationTargets(new ArrayList<>(Arrays.asList(RecommendationTarget.builder().targetName("TARGET_NAME_1").deleted(false).build(),
+                    RecommendationTarget.builder().targetName("TARGET_NAME_2").deleted(false).build()))));
 
     private final Long id;
     private final MyBook myBook;
